--- a/.github/workflows/build-swweeep.yml
+++ b/.github/workflows/build-swweeep.yml
@@ -12,4 +12,4 @@ jobs:
       shield: '["swweeeep_left","swweeeep_right"]'
       custom_config: '["#define MIRYOKU_CLIPBOARD=WIN"]'
       kconfig: '["CONFIG_ZMK_DISPLAY=n\nCONFIG_ZMK_MOUSE=y\nCONFIG_ZMK_SLEEP=y\nCONFIG_ZMK_PM_SOFT_OFF=y"]'
-      branches: '["zmkfirmware/zmk/main petejohanson/zmk/feat/pointers-move-scroll"]'
+      branches: '["zmkfirmware/zmk/main"]'
